--- a/exercicios_javafx/src/fxml/Login.fxml
+++ b/exercicios_javafx/src/fxml/Login.fxml
@@ -3,18 +3,18 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.LoginControlador">
-	<Label text="Seja Bem vindo" GridPane.columnIndex="0"
+<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.LoginControlador" styleClass="login">
+	<Label text="Seja Bem vindo" styleClass="login-titulo" GridPane.columnIndex="0"
 		GridPane.rowIndex="0"></Label>
-	<Label text="Email" GridPane.columnIndex="0"
+	<Label text="Email" GridPane.columnIndex="0" styleClass="login-form-label"
 		GridPane.rowIndex="1"></Label>
 	<TextField fx:id="campoEmail" GridPane.columnIndex="1" GridPane.rowIndex="1"></TextField>
 
-	<Label text="Senha" GridPane.columnIndex="0"
+	<Label text="Senha" GridPane.columnIndex="0" styleClass="login-form-label"
 		GridPane.rowIndex="2"></Label>
 	<PasswordField fx:id="campoSenha" GridPane.columnIndex="1" GridPane.rowIndex="2"></PasswordField>
 
-	<Button text="Entrar" GridPane.columnIndex="0"
+	<Button text="Entrar" GridPane.columnIndex="0" styleClass="login-form-botao"
 		GridPane.rowIndex="3"
 		onAction="#entrar">
 
