--- a/exercicios_javafx/src/fxml/Login.fxml
+++ b/exercicios_javafx/src/fxml/Login.fxml
@@ -1,22 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
+<?import java.lang.Object?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.LoginControlador" styleClass="login">
-	<Label text="Seja Bem vindo" styleClass="login-titulo" GridPane.columnIndex="0"
-		GridPane.rowIndex="0"></Label>
-	<Label text="Email" GridPane.columnIndex="0" styleClass="login-form-label"
-		GridPane.rowIndex="1"></Label>
-	<TextField fx:id="campoEmail" GridPane.columnIndex="1" GridPane.rowIndex="1"></TextField>
+<GridPane xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="fxml.LoginControlador" styleClass="login" hgap="15"
+	vgap="15">
 
-	<Label text="Senha" GridPane.columnIndex="0" styleClass="login-form-label"
-		GridPane.rowIndex="2"></Label>
-	<PasswordField fx:id="campoSenha" GridPane.columnIndex="1" GridPane.rowIndex="2"></PasswordField>
+	<padding>
+		<Insets left="40" right="40" top="40" />
+	</padding>
 
-	<Button text="Entrar" GridPane.columnIndex="0" styleClass="login-form-botao"
-		GridPane.rowIndex="3"
-		onAction="#entrar">
+	<columnConstraints>
+		<ColumnConstraints minWidth="90" prefWidth="90"
+		halignment="right"/>
+		<ColumnConstraints prefWidth="200" maxWidth="Infinity" hgrow="ALWAYS" />
+	</columnConstraints>
+
+	<Label text="Seja Bem vindo" styleClass="login-titulo"
+		GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="2"
+		GridPane.halignment="CENTER"></Label>
+	<Label text="Email" GridPane.columnIndex="0"
+		styleClass="login-form-label" GridPane.rowIndex="1"></Label>
+	<TextField fx:id="campoEmail" GridPane.columnIndex="1"
+		GridPane.rowIndex="1"></TextField>
+
+	<Label text="Senha" GridPane.columnIndex="0"
+		styleClass="login-form-label" GridPane.rowIndex="2"></Label>
+	<PasswordField fx:id="campoSenha"
+		GridPane.columnIndex="1" GridPane.rowIndex="2"></PasswordField>
+
+	<Button text="Entrar" GridPane.columnIndex="0"
+		styleClass="login-form-botao" GridPane.rowIndex="3" onAction="#entrar"
+		GridPane.columnSpan="2" GridPane.halignment="CENTER">
 
 	</Button>
 </GridPane>
